<resources>
    <string name="app_name">BaseBleDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">ScanFragment</string>
    <string name="second_fragment_label">DeviceFragment</string>
    <string name="next">Next</string>
    <string name="previous">返回</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="unknown_device">----</string>

    <string name="no_location_permission">安卓6.0以上蓝牙操作需要定位权限</string>
    <string name="no_ble_permission">需要蓝牙权限</string>
    <string name="no_bluetooth">蓝牙服务没有开启</string>
    <string name="no_location">定位服务没有开启</string>
    <string name="open">开启</string>
    <string name="led">LED灯</string>
    <string name="switch_state">开关状态</string>
    <string name="sound">声音</string>
    <string name="offline">离线</string>
    <string name="online">已连接</string>
    <string name="connecting">连接中...</string>
</resources>